Added a lot of react stuff

--- a/react.html
+++ b/react.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>React Demo</title>
+    <link rel="stylesheet" href="https://unpkg.com/mocha@3.4.2/mocha.css">
     <style media="screen">
       .messageBox {
         border: 1px solid;
@@ -28,9 +29,13 @@
   <body>
     <main id="content"></main>
 
+    <div id="mocha"></div>
+
     <script src="https://unpkg.com/babel-standalone"></script>
     <script type="text/javascript" src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"></script>
     <script type="text/javascript" src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/chai@4.0.2/chai.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/mocha@3.4.2/mocha.js"></script>
 
     <script type="text/babel" data-presets="react">
 
@@ -87,5 +92,33 @@
 
     </script>
 
-  </body>
+    <script type="text/babel" data-presets="react">
+
+      const assert = chai.assert;
+
+      mocha.ui("bdd");
+      mocha.reporter("html");
+
+      describe("Example Tests", () => {
+        it("Proved that math works", () => {
+          assert.equal(5, 3+2, "Math works!");
+          assert.notEqual(5, 2+2, "Math still works!");
+        });
+
+        it("Found our component", () => {
+          assert.isDefined(MessageBox, "Our MessageBox component is defined.");
+        });
+
+        it("Let us test a function", () => {
+          let myName = "Simon";
+          const greet = (name) => "Hello, " + name + "!";
+          assert.include(greet(myName), myName);
+        });
+      });
+
+      mocha.run();
+
+    </script>
+
+    </body>
 </html>
